Fix content of sidebar shifting vertically on page load (#2415)
https://github.com/pydata/pydata-sphinx-theme/issues/2413

Due to the svg-inline--fa class, the fontawesome script messes around
with the sizing when the js executes at page load, causing vertical
shifts in the layout below it for a split second. This is annoying when
navigating between doc pages.

Out of scope, but I think we should move away from the fontawesome js
file, which is also very large (1.5MB) in favor of CSS+WOFF
(https://github.com/pydata/pydata-sphinx-theme/issues/2115,
https://github.com/pydata/pydata-sphinx-theme/issues/2379, and probably
https://github.com/pydata/pydata-sphinx-theme/issues/2408)

Before


https://github.com/user-attachments/assets/9429611c-c9c4-47e6-9133-f5e8da1294ce


After


https://github.com/user-attachments/assets/15b2b35b-0394-4663-955b-9dc232edad18

Notice that some other elements are jumping around at load time, this is
the exact same problem and would be resolved by removing FA JS.

--- a/src/pydata_sphinx_theme/assets/styles/components/_sidebar-collapse.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_sidebar-collapse.scss
@@ -43,6 +43,7 @@
 
       // This value was also chosen by trial and error until it looked good.
       height: 1.3em;
+      box-sizing: content-box;
     }
 
     .pst-collapse-sidebar-label {
